# minecraft-ping

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  args.c  args.h  bedrock.c  bedrock.h  java.c  java.h  legacy.c  legacy.h  main.c  network.c  network.h
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
core/: CMakeLists.txt  bedrock.c  java.c  legacy.c  mcping.h  mcping.pc.in  utils.c  utils.h
main/: CMakeLists.txt  args.c  args.h  main.c
src/: logger.rs  main.rs  util.rs
src/analyze/: favicon.rs  forge_info.rs  game_mode.rs  mod.rs  motd.rs  ping.rs  player.rs  server_guid.rs  version.rs
src/mode/: bedrock.rs  java.rs  legacy.rs  mod.rs
src/network/: connection.rs  mod.rs  resolve.rs  schema.rs  util.rs
