[package]
name = "mcping"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt", "time"] }
log = { version = "0.4.28", features = ["std"] }
colored = "3.0.0"
bytes = "1.11.0"
regex = "1.12.2"
async-trait = "0.1.89"
data-url = "0.3.2"
trust-dns-resolver = "0.23.2"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"