[package]
name = "mcping"
version = "2.0.0"
edition = "2024"

[features]
analyze-forge-info = []
ping-legacy = []

[dependencies]
async-http-proxy = { version = "1.2.5", features = ["basic-auth", "runtime-tokio"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
data-url = "0.3.2"
fast-socks5 = "0.10.0"
log = { version = "0.4.28", features = ["std"] }
regex-lite = "0.1.8"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt", "time"] }
hickory-resolver = "0.25.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
